// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shareContextMenuExtensions should render a custom panel title when provided 1`] = `
<Fragment>
  <I18nProvider>
    <EuiContextMenuClass
      data-test-subj="shareContextMenu"
      initialPanelId={3}
      panels={
        Array [
          Object {
            "id": 1,
          },
          Object {
            "0": Object {
              "id": 1,
            },
            "id": 2,
          },
          Object {
            "id": 3,
            "items": Array [
              Object {
                "data-test-subj": "sharePanel-Embed",
                "icon": "console",
                "name": "Embed",
                "onClick": [Function],
              },
              Object {
                "data-test-subj": "sharePanel-Permalinks",
                "disabled": false,
                "icon": "link",
                "name": "Get link",
                "onClick": [Function],
              },
              Object {
                "data-test-subj": "sharePanel-ZZZpanel",
                "icon": "document",
                "name": "ZZZ panel",
              },
              Object {
                "data-test-subj": "sharePanel-AAApanel",
                "icon": "document",
                "name": "AAA panel",
              },
            ],
            "title": "Share this Custom object",
          },
        ]
      }
    />
  </I18nProvider>
</Fragment>
`;

exports[`shareContextMenuExtensions should sort ascending on sort order first and then ascending on name 1`] = `
<Fragment>
  <I18nProvider>
    <EuiContextMenuClass
      data-test-subj="shareContextMenu"
      initialPanelId={3}
      panels={
        Array [
          Object {
            "id": 1,
          },
          Object {
            "0": Object {
              "id": 1,
            },
            "id": 2,
          },
          Object {
            "id": 3,
            "items": Array [
              Object {
                "data-test-subj": "sharePanel-Permalinks",
                "disabled": false,
                "icon": "link",
                "name": "Get link",
                "onClick": [Function],
              },
              Object {
                "data-test-subj": "sharePanel-ZZZpanel",
                "icon": "document",
                "name": "ZZZ panel",
              },
              Object {
                "data-test-subj": "sharePanel-AAApanel",
                "icon": "document",
                "name": "AAA panel",
              },
            ],
            "title": "Share this dashboard",
          },
        ]
      }
    />
  </I18nProvider>
</Fragment>
`;

exports[`should disable the share URL when set 1`] = `
<Fragment>
  <I18nProvider>
    <EuiContextMenuClass
      data-test-subj="shareContextMenu"
      initialPanelId={1}
      panels={
        Array [
          Object {
            "id": 1,
            "items": Array [
              Object {
                "data-test-subj": "sharePanel-Embed",
                "icon": "console",
                "name": "Embed",
                "onClick": [Function],
              },
              Object {
                "data-test-subj": "sharePanel-Permalinks",
                "disabled": true,
                "icon": "link",
                "name": "Get link",
                "onClick": [Function],
              },
            ],
            "title": "Share this dashboard",
          },
        ]
      }
    />
  </I18nProvider>
</Fragment>
`;

exports[`should only render permalink panel when there are no other panels 1`] = `
<Fragment>
  <I18nProvider>
    <EuiContextMenuClass
      data-test-subj="shareContextMenu"
      initialPanelId={1}
      panels={
        Array [
          Object {
            "id": 1,
            "items": Array [
              Object {
                "data-test-subj": "Permalinks",
                "disabled": false,
                "icon": "link",
                "name": "Get link",
                "onClick": [Function],
                "sortOrder": 0,
              },
            ],
            "title": "Share this dashboard",
          },
        ]
      }
    />
  </I18nProvider>
</Fragment>
`;

exports[`should render context menu panel when there are more than one panel 1`] = `
<Fragment>
  <I18nProvider>
    <EuiContextMenuClass
      data-test-subj="shareContextMenu"
      initialPanelId={1}
      panels={
        Array [
          Object {
            "id": 1,
            "items": Array [
              Object {
                "data-test-subj": "sharePanel-Embed",
                "icon": "console",
                "name": "Embed",
                "onClick": [Function],
              },
              Object {
                "data-test-subj": "sharePanel-Permalinks",
                "disabled": false,
                "icon": "link",
                "name": "Get link",
                "onClick": [Function],
              },
            ],
            "title": "Share this dashboard",
          },
        ]
      }
    />
  </I18nProvider>
</Fragment>
`;
